--- a/src/app/filters/customer-filter/customer-filter.component.css
+++ b/src/app/filters/customer-filter/customer-filter.component.css
@@ -5,7 +5,9 @@
     display: flex;
     flex-direction: column;
 }
-
+.panel-style{
+    width: 200px;
+}
 .title{
     background: white;
     position: relative;
