--- a/src/app/filters/payed-filter/payed-filter.component.html
+++ b/src/app/filters/payed-filter/payed-filter.component.html
@@ -2,14 +2,11 @@
     <h3 class="title" >оплата</h3>
     <div class="p-fluid  p-grid p-formgrid" style="width: 200px;margin: 5px 5px 10px;position: relative;bottom: 20px">
         <div class="p-field p-col-36 p-md-12">
-            <p-dropdown  style="margin: 5px 5px 10px;position: relative;bottom: 20px"
-                         (onChange)="changeState()"  [showClear]="true"   [filter]="true"
+            <p-dropdown
+                         (onChange)="changeState()"  [showClear]="true"
                          [options]="states" [(ngModel)]="payed" optionLabel="name"></p-dropdown>
-
-
         </div>
     </div>
-
 
 
 
