--- a/src/app/filters/period-date-filter/period-date-filter.component.html
+++ b/src/app/filters/period-date-filter/period-date-filter.component.html
@@ -15,12 +15,26 @@
 
 <!--    </div>-->
 <!--</div>-->
-<div class="p-fluid  p-grid p-formgrid">
+<div   *ngIf="onlyField"   class="p-fluid  p-grid p-formgrid" style="width: 270px">
     <div class="p-field p-col-36 p-md-12">
         <p-dropdown (onClick)="changePeriod()"
-                                                      [options]="periods" [(ngModel)]="period" placeholder="{{'loginPage.datePeriod' | translate}}" optionLabel="name"  [showClear]="true">
-
+                    [options]="periods" [(ngModel)]="period" placeholder="{{'loginPage.datePeriod' | translate}}"
+                    optionLabel="name"  [showClear]="true">
     </p-dropdown>
     </div>
 </div>
+<div *ngIf="!onlyField" class="filter-component">
+    <h3 class="title" >{{'loginPage.datePeriod' | translate}}</h3>
+    <div class="p-fluid  p-grid p-formgrid" style="width: 200px;margin: 5px 5px 10px;position: relative;bottom: 20px">
+        <div class="p-field p-col-36 p-md-12">
+            <p-dropdown (onClick)="changePeriod()" [options]="periods" [(ngModel)]="period"
+                        placeholder="{{'loginPage.datePeriod' | translate}}" optionLabel="name"  [showClear]="true">
+            </p-dropdown>
 
+        </div>
+    </div>
+
+
+
+
+</div>
