--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -3,16 +3,16 @@
 minWidth:'100%', height:'53px',position:'fixed',left:'0px',top:'0px'} "
 >
     <p-button *ngIf="apiService.getUserData()!==null && apiService.getUserData()!==undefined"
-              type="text" [style]="{minWidth:'80px',minHeight:'40px',
+              type="text" [style]="{minWidth:'40px',minHeight:'40px',
                   background:'#DC143C', borderColor:'#DC143C'}"
               (click)="quit()" icon="pi pi-fw  pi-power-off"
               class="p-button-success p-button-text"
-              [label]="'loginPage.quit' | translate"></p-button>
+              [label]=""></p-button>
     <p-button *ngIf="apiService.getUserData()===null || apiService.getUserData()===undefined"
-              type="text" [style]="{minWidth:'80px',minHeight:'40px'}"
+              type="text" [style]="{minWidth:'40px',minHeight:'40px'}"
               (click)="quit()" icon="pi pi-fw pi-user"
               class="p-button-success p-button-text"
-              [label]=" 'loginPage.login' | translate"></p-button>
+              [label]=""></p-button>
 </p-menubar>
 
 <!--<p-sidebar [modal]="false" [(visible)]="display">
