--- a/src/app/master-select-window/master-select-window.component.html
+++ b/src/app/master-select-window/master-select-window.component.html
@@ -1,5 +1,7 @@
 <div style="background: #F56C6C">
     <p>НАХОДИТЬСЯ В РАЗРАБОТКЕ</p>
 </div>
-<app-table-page [startData]="data" [title]=" 'loginPage.listOrders' | translate"
-                [mainColumn]="mainColumn"  *ngIf="data!=null"></app-table-page>
+<app-table-page [startData]="data" title=" вибір замовлення"
+                [mainColumn]="mainColumn" [stateFilterDisable]="true"
+                [buttonItems]="buttItem" [standardFilterDisable]="true"
+                [buttonActionDisable]="true"  *ngIf="data!=null"></app-table-page>
