--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,5 @@
     <router-outlet></router-outlet>
 
 </div>
+<app-loading-spiner *ngIf="apiService.isLoading"></app-loading-spiner>
 <p-toast></p-toast>
