--- a/src/app/widgets/filters/date-filter/date-filter.component.css
+++ b/src/app/widgets/filters/date-filter/date-filter.component.css
@@ -7,14 +7,25 @@
     flex-direction: column;
     align-content: center;
     justify-content: center;
+    border: 4px solid lightgray;
+    border-radius: 5px;
+
 }
 
 .title{
-    background: white;
+    border-radius: 10px;
+
+    background:  white;
     position: relative;
-    top:-20px;
-    font-size: 1.5rem;
+    display: inline-block;
+    width: fit-content;
+    height: fit-content;
+    display: inline-block;
+    left: 10px;
     paddng:10px;
-    width:100px;
+    top:-20px;
+    margin: 0px;
+    padding-left: 5px;
+    padding-right: 5px;;
 
 }
