--- a/src/app/widgets/filters/payed-filter/payed-filter.component.css
+++ b/src/app/widgets/filters/payed-filter/payed-filter.component.css
@@ -1,5 +1,8 @@
 .filter-component {
-    width: auto;
+    border: 4px solid lightgray;
+    border-radius: 5px;
+    width: 100%;
+
     height: 100px;
     background: #f4f4f4;
     display: flex;
@@ -7,10 +10,17 @@
 }
 
 .title{
-    background: white;
+    border-radius: 10px;
+    background:  white;
     position: relative;
-    top:-30px;
+    display: inline-block;
+    width: fit-content;
+    height: fit-content;
+    display: inline-block;
+    left: 10px;
     paddng:10px;
-    width:130px;
-
+    top:-20px;
+    margin: 0px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
