--- a/src/app/widgets/filters/period-date-filter/period-date-filter.component.css
+++ b/src/app/widgets/filters/period-date-filter/period-date-filter.component.css
@@ -1,4 +1,6 @@
 .filter-component {
+    border-radius: 5px;
+
     width: auto;
     height: 100px;
     background: #f4f4f4;
@@ -7,10 +9,19 @@
 }
 
 .title{
-    background: white;
+    border-radius: 10px;
+
+    background:  white;
     position: relative;
-    top:-30px;
+    display: inline-block;
+    width: fit-content;
+    height: fit-content;
+    display: inline-block;
+    left: 10px;
     paddng:10px;
-    width:130px;
+    top:-20px;
+    margin: 0px;
+    padding-left: 5px;
+    padding-right: 5px;
 
 }
