--- a/src/app/widgets/filters/state-filter/state-filter.component.css
+++ b/src/app/widgets/filters/state-filter/state-filter.component.css
@@ -4,13 +4,23 @@
     background: #f4f4f4;
     display: flex;
     flex-direction: column;
+    border: 4px solid lightgray;
+    border-radius: 5px;
+
 }
 
 .title{
-    background: white;
+    border-radius: 10px;
+    background:  white;
     position: relative;
-    top:-30px;
+    display: inline-block;
+    width: fit-content;
+    height: fit-content;
+    display: inline-block;
+    left: 10px;
     paddng:10px;
-    width:130px;
-
+    top:-20px;
+    margin: 0px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
