--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,11 +6,8 @@
 ></app-master-start-window>
 <div class="login-page" *ngIf="!masterWindowVisible">
     <div class="login-form shadow  ">
-        <img src="assets/image/login-images.png"/>
-        <hr width="100%"/>
-
-
-
+        <!--<img src="assets/image/login-images.png"/>
+        <hr width="100%"/>-->
         <div class="login-row">
 
             <span style="width: 90%">
