--- a/src/app/table-page/table-page.component.html
+++ b/src/app/table-page/table-page.component.html
@@ -34,13 +34,13 @@
         <p-footer class="footer-dialog">
             <button pRipple type="button" (click)="cancelFilter()" style="margin-right: 15%;margin-left:10%" pButton
                     class="p-button-danger"
-                    [label]="'loginPage.cancel' | translate" icon="pi pi-times" label="delete"></button>
-            <button pRipple type="button" (click)="updateData()" style="margin-left:15%;margin-right:10% " pButton
-                    icon="pi pi-check"
-                    [label]="'loginPage.confirm' | translate"></button>
+                        [label]="'loginPage.cancel' | translate" icon="pi pi-times" label="delete"></button>
+                <button pRipple type="button" (click)="updateData()" style="margin-left:15%;margin-right:10% " pButton
+                        icon="pi pi-check"
+                        [label]="'loginPage.confirm' | translate"></button>
 
-        </p-footer>
-    </p-dialog>
+            </p-footer>
+        </p-dialog>
     <p-confirmPopup></p-confirmPopup>
     <p-contextMenu #cm [model]="items"></p-contextMenu>
 
@@ -72,9 +72,8 @@
                         <div *ngIf="!standardFilterDisable" class="p-mb-2 p-mr-2" style=" position: relative;top:-2px">
                             <button pButton type="button" (click)="showDialog()"
                                     class="p-button-secondary"
-                                    style="width: 80px"
-                                    icon="pi pi-filter"
-                            >{{'loginPage.filters' | translate}}
+                                    icon="pi pi-filter size-icon-table"
+                            >
                             </button>
                         </div>
                         <div class="p-mb-2 p-mr-2" style="width: 300px; position: relative;top:-10px">
@@ -94,22 +93,23 @@
                         <div class="p-mb-2 p-mr-2" style="width: 100px; position: relative;top:-2px">
                             <button pButton type="button" (click)="downloadExel()"
                                     class="p-button-secondary"
-                                    style="width: 70px"
-                                    icon="pi pi-file-excel"
-                            >exel
+                                    icon="pi pi-file-excel size-icon-table "
+                            >
                             </button>
 
                         </div>
                         <div class="p-mb-2 p-mr-2"
-                             style=" position: relative;top:20px;left: 5px;width: 40px;font-size: 20px">
-                            <p-multiSelect [options]="columns" [(ngModel)]="_selectedColumns" optionLabel="header"
+                             style=" position: relative;top:-2px;">
+                            <p-multiSelect [options]="columns" [(ngModel)]="_selectedColumns"
+                                           optionLabel="header"
                                            [showHeader]="false"
                                            id="multisect"
                                            selectedItemsLabel=""
-                                           dropdownIcon="pi pi-microsoft"
+                                           defaultLabel=""
+                                           dropdownIcon="pi pi-microsoft size-icon"
                                            scrollHeight="700px"
-                                           [style]="{width:'0px',height:'0px',fontSize:'3rem',position:'relative'}"
-                                           placeholder="{{'loginPage.ChooseColumns' | translate}}"></p-multiSelect>
+                                           [style]="{width:'38px',height:'40px',position:'relative',background:'#f4f4f4',borderColor:'#f4f4f4'}"
+                                           placeholder=""></p-multiSelect>
                         </div>
                     </div>
 
@@ -121,7 +121,7 @@
                     <col style="width:30px">
                     <col style="width:30px">
                     <col *ngFor="let col of columns" style="{{'width:'+col.width+'px'}}">
-                    <col style="width:150px">
+                    <col *ngIf="buttonActionDisable" style="width:150px">
 
                 </colgroup>
             </ng-template>
