--- a/src/app/widgets/filters/customer-filter/customer-filter.component.html
+++ b/src/app/widgets/filters/customer-filter/customer-filter.component.html
@@ -1,20 +1,22 @@
 <div class="filter-component">
-    <h3 class="title">замовник</h3>
+    <div class="white-line"></div>
+    <p class="title">замовник</p>
+    <div class="filter-body">
 
-    <div class="p-fluid  p-grid p-formgrid" style="width: 200px;margin: 5px 5px 10px;position: relative;bottom: 20px">
-        <div class="p-field p-col-36 p-md-12">
-            <p-autoComplete (onSelect)="changeState()" [(ngModel)]="selected" [suggestions]="filtered"
-                            (completeMethod)="filter($event)" panelStyle="panel-style"
+        <div class=" p-fluid  p-grid p-formgrid">
+            <div class="p-field p-col-36 p-md-12">
+                <p-autoComplete (onSelect)="changeState()" [(ngModel)]="selected" [suggestions]="filtered"
+                                (completeMethod)="filter($event)" panelStyle="panel-style"
 
-                            field="name"
-                            [dropdown]="true">
-                <ng-template let-country pTemplate="item">
-                    <div class="country-item">
-                        <div>{{country.name}}</div>
-                    </div>
-                </ng-template>
-            </p-autoComplete>
+                                field="name"
+                                [dropdown]="true">
+                    <ng-template let-country pTemplate="item">
+                        <div class="country-item">
+                            <div>{{country.name}}</div>
+                        </div>
+                    </ng-template>
+                </p-autoComplete>
+            </div>
         </div>
     </div>
-
 </div>
