--- a/src/app/widgets/filters/date-filter/date-filter.component.html
+++ b/src/app/widgets/filters/date-filter/date-filter.component.html
@@ -1,6 +1,7 @@
 <div class="filter-component">
-    <h3 class="title">дата</h3>
-    <div style="position: relative; top:-20px">
+    <p class="title">дата</p>
+    <div class="white-line"></div>
+    <div style="position: relative">
 
     <div style="margin-bottom:3%; display: flex;flex-direction: column;justify-content: center;align-content: center">
 
@@ -14,7 +15,7 @@
             <label for="val5">мiсяцi</label>
             <p-radioButton  name="groupname1" [value]="3" inputId="val6"
                             [(ngModel)]="menuChange" style="margin-right:5%;margin-left:5%;"></p-radioButton>
-            <label for="val6">период</label>
+            <label for="val6">період</label>
         </div>
     </div>
 
