--- a/src/app/widgets/filters/employee-filter/employee-filter.component.html
+++ b/src/app/widgets/filters/employee-filter/employee-filter.component.html
@@ -1,6 +1,9 @@
 <div class="filter-component">
-    <h3 class="title">працівник</h3>
-    <div class="p-fluid  p-grid p-formgrid" style="width: 200px;margin: 5px 5px 10px;position: relative;bottom: 20px">
+    <div class="white-line"></div>
+    <p class="title">працівник</p>
+    <div class="filter-body">
+
+    <div class=" p-fluid  p-grid p-formgrid" >
         <div class="p-field p-col-36 p-md-12">
             <p-autoComplete [(ngModel)]="selected" [suggestions]="filtered"
                             (onSelect)="changeState()" (completeMethod)="filter($event)"
@@ -13,5 +16,6 @@
                 </ng-template>
             </p-autoComplete>
         </div>
+    </div>
     </div>
 </div>
