--- a/src/app/widgets/filters/state-filter/state-filter.component.html
+++ b/src/app/widgets/filters/state-filter/state-filter.component.html
@@ -1,5 +1,5 @@
 <!--<div class="filter-component">-->
-<!--    <h3 class="title" >{{'loginPage.datePeriod' | translate}}</h3>-->
+<!--    <p class="title" >{{'loginPage.datePeriod' | translate}}</p>-->
 <!--    <p-dropdown  style="margin: 5px 5px 10px;position: relative;bottom: 20px"-->
 <!--            (onChange)="changeState()"  [options]="states" [(ngModel)]="state" optionLabel="name"></p-dropdown>-->
 
@@ -17,8 +17,11 @@
 
 
 <div *ngIf="!onlyField" class="filter-component">
-    <h3 class="title" >стан</h3>
-    <div class="p-fluid  p-grid p-formgrid" style="width: 200px;margin: 5px 5px 10px;position: relative;bottom: 20px">
+    <div class="white-line"></div>
+    <p class="title" >стан</p>
+    <div class="filter-body">
+
+    <div class=" p-fluid  p-grid p-formgrid" >
         <div class="p-field p-col-36 p-md-12">
             <p-dropdown            [disabled]="disabled"
                                    (onChange)="changeState()"
@@ -27,6 +30,7 @@
 
         </div>
     </div>
+</div>
 
 
 
