--- a/src/app/widgets/filters/date-filter/date-filter.component.html
+++ b/src/app/widgets/filters/date-filter/date-filter.component.html
@@ -1,8 +1,7 @@
 <div class="filter-component">
     <p class="title">дата</p>
     <div class="white-line"></div>
-    <div style="position: relative">
-
+    <div style="position: relative;top:10px">
     <div style="margin-bottom:3%; display: flex;flex-direction: column;justify-content: center;align-content: center">
 
 
