--- a/src/app/widgets/filters/date-filter/date-filter.component.html
+++ b/src/app/widgets/filters/date-filter/date-filter.component.html
@@ -1,5 +1,5 @@
 <div class="filter-component">
-    <p class="title" style="position: absolute;top:-5px">дата</p>
+    <p class="title-d">дата</p>
     <div class="white-line"></div>
     <div style="position: relative;top:10px">
     <div style="margin-bottom:3%; display: flex;flex-direction: column;justify-content: center;align-content: center">
