--- a/src/app/widgets/filters/date-filter/date-filter.component.css
+++ b/src/app/widgets/filters/date-filter/date-filter.component.css
@@ -12,3 +12,20 @@
 
 }
 
+.title-d{
+    background:  white;
+    display: inline-block;
+    width: fit-content;
+    height: fit-content;
+    display: inline-block;
+    left: 10px;
+    top:-10px;
+    position: absolute;
+    border:  solid lightgray ;
+    border-width: 0px 1px 1px 1px ;
+    border-radius:0px 0px 10px 10px;
+    paddng:10px;
+    margin: 0px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
