--- a/src/app/widgets/filters/date-filter/date-filter.component.html
+++ b/src/app/widgets/filters/date-filter/date-filter.component.html
@@ -23,9 +23,9 @@
                   ></p-calendar>
         <p-calendar style="margin-bottom:3%;" [showIcon]="true" placeholder="дата до" (click)="changePeriod()" [(ngModel)]="dateTo" *ngIf="menuChange===1" dateFormat="yy-mm-dd"
                     ></p-calendar>
-        <p-calendar style="margin-bottom:3%;" [showIcon]="true" placeholder="дата від"  (click)="changePeriod()" [(ngModel)]="dateFrom" *ngIf="menuChange===2" view="month"
+        <p-calendar style="margin-bottom:3%;" [showIcon]="true" placeholder="дата від"  (click)="changeMonthPeriodDateFrom()" [(ngModel)]="dateFrom" *ngIf="menuChange===2" view="month"
                     dateFormat="yy-mm-dd" ></p-calendar>
-        <p-calendar style="margin-bottom:3%;" [showIcon]="true" placeholder="дата до" (click)="changePeriod()" [(ngModel)]="dateTo" *ngIf="menuChange===2" view="month"
+        <p-calendar style="margin-bottom:3%;"   [showIcon]="true" placeholder="дата до" (click)="changeMonthPeriodDateTo()" [(ngModel)]="dateTo" *ngIf="menuChange===2" view="month"
                      dateFormat="yy-mm-dd" ></p-calendar>
         <app-period-date-filter style="margin-bottom:3%;" [onlyField]="true"  *ngIf="menuChange===3" ></app-period-date-filter>
     </div>
