--- a/src/app/table-page/table-page.component.html
+++ b/src/app/table-page/table-page.component.html
@@ -106,6 +106,7 @@
                                            id="multisect"
                                            selectedItemsLabel=""
                                            defaultLabel=""
+                                           (onClick)="chooseColumn()"
                                            dropdownIcon="pi pi-microsoft size-icon"
                                            scrollHeight="700px"
                                            [style]="{width:'38px',height:'40px',position:'relative',background:'#f4f4f4',borderColor:'#f4f4f4'}"
